base/middleware-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "POST"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList: "*"
    accessControlMaxAge: 100
    addVaryHeader: true
