base/batch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scoreserver-batch
  labels:
    app.kubernetes.io/name: scoreserver-batch
    app.kubernetes.io/component: batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-batch
      app.kubernetes.io/component: batch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-batch
        app.kubernetes.io/component: batch
    spec:
      serviceAccountName: scoreserver-batch
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: batch
          image: batch
          args:
            - --api-url=http://scoreserver-backend:8081
            - --api-token-file=/run/ictstore-secrets/token
          volumeMounts:
            - mountPath: /run/ictstore-secrets
              name: ictscore-secrets
              readOnly: true
            - mountPath: /run/sstate-credentials
              name: sstate-credentials
              readOnly: true
          resources:
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: ictscore-secrets
          projected:
            sources:
              - serviceAccountToken:
                  audience: contest.ictsc.net
                  path: token
        - name: sstate-credentials
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: scoreserver-sstate-credentials
