base/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-backend
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: scoreserver-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-backend
    spec:
      containers:
        - name: scoreserver
          image: backend
          args:
            - --contestant.http-addr=0.0.0.0:8080
            - --contestant.route-prefix=/api
            - --admin.http-addr=0.0.0.0:8081
            - --admin.auth-config-file=/etc/scoreserver/admin-auth-config.yaml
            - --admin.auth-policy-file=/etc/scoreserver/admin-auth-policy.csv
          ports:
            - containerPort: 8080
              name: contestant
            - containerPort: 8081
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/scoreserver
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 10
            grpc:
              port: 8081
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: "1"
      volumes:
        - name: config
          configMap:
            name: backend-config
        - name: otel-col-config
          configMap:
            name: otel-col-config
