base/deploy-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-admin-auth-proxy
  labels:
    app.kubernetes.io/component: admin-auth-proxy
    app.kubernetes.io/name: scoreserver-admin-auth-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-admin-auth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-admin-auth-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy
          args:
            # Server
            - --http-address=0.0.0.0:4180
            - --metrics-address=0.0.0.0:9090
            # Session Store
            - --session-store-type=redis
            - --redis-connection-url=redis://redis-haproxy.scoreserver.svc.cluster.local:6379/1
            # Header
            - --set-authorization-header=true
            - --skip-jwt-bearer-tokens=true
            # Provider
            - --provider=oidc
            - --provider-display-name=OIDC
            - --code-challenge-method=S256
            - --scope=openid profile email groups
            - --email-domain=*
          ports:
            - containerPort: 4180
              name: http
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
            requests:
              memory: 16Mi
              cpu: 10m
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP
