base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-backend
  labels:
    app.kubernetes.io/name: scoreserver-backend
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-backend
  ports:
    - name: contestant
      port: 8080
      targetPort: contestant
    - name: admin
      port: 8081
      targetPort: admin
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-frontend
  labels:
    app.kubernetes.io/name: scoreserver-frontend
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-frontend
  ports:
    - name: contestant
      port: 8080
      targetPort: contestant
    - name: admin
      port: 8081
      targetPort: admin
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-admin-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-admin-auth-proxy
  labels:
    app.kubernetes.io/component: admin-auth-proxy
spec:
  selector:
    app.kubernetes.io/name: scoreserver-admin-auth-proxy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
