base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-frontend
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: scoreserver-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-frontend
    spec:
      serviceAccountName: scoreserver
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scoreserver
          image: frontend
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
          ports:
            - containerPort: 8080
              name: http-contestant
            - containerPort: 8081
              name: http-admin
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /healthz
              port: http-contestant
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: "1"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scoreserver-frontend
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-frontend
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http-contestant
              protocol: TCP
            - port: http-admin
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scoreserver-frontend
  ports:
    - name: http-contestant
      port: 8080
      targetPort: http-contestant
    - name: http-admin
      port: 8081
      targetPort: http-admin
